# sjasoft-uopmeta

./: pyproject.toml
src/sjasoft/uopmeta/: __init__.py  attr_info.py
src/sjasoft/uopmeta/schemas/: meta.py  predefined.py  query.py
src/uop/meta/: attr_info.py  oid.py
src/uop/meta/schemas/: meta.py  predefined.py  query.py
