[project]
name = "sjasoft-uopmeta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Samantha Atkins", email = "samantha@sjasoft.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic==1.10.7",
    "sjasoft-utils>=0.1.0",
]

[project.scripts]
sjasoft-uopmeta = "sjasoft.uopmeta:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
